Bug 408346 - Toolbar bookmarks button does not work
Summary: Toolbar bookmarks button does not work
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-05 13:43 UTC by J.Novo
Modified: 2019-06-07 15:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description J.Novo 2019-06-05 13:43:28 UTC
SUMMARY
Dolphin toolbar bookmarks button does not work. Nothing happens when it gets clicked.

STEPS TO REPRODUCE
1. Add bookmarks button to toolbar.
2. Click the added button.

OBSERVED RESULT
Nothing happens.


EXPECTED RESULT
A list showing the available bookmarks should be shown.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.16.80
KDE Frameworks Version: 5.59.0
Qt Version: 5.12.0
Kernel Version: 4.18.0-21-generic
OS Type: 64-bit


I am on Dolphin
Version 19.07.70
Comment 1 Nate Graham 2019-06-07 15:48:54 UTC
You need to click-and-hold. This is unintuitive and confusing. I'll fix it.
Comment 2 Nate Graham 2019-06-07 15:53:15 UTC
Git commit 1bcd47842224509964229a0bddc2277dfe1467da by Nate Graham.
Committed on 07/06/2019 at 15:52.
Pushed by ngraham into branch 'master'.

Make Bookmarks item work properly as a toolbar item
- Make its menu open on click, not click-and-hold
- Give it a proper icon
FIXED-IN: 19.08.0

M  +3    -0    src/dolphinmainwindow.cpp

https://commits.kde.org/dolphin/1bcd47842224509964229a0bddc2277dfe1467da