Make Bookmarks item work properly as a toolbar item - Make its menu open on click, not click-and-hold - Give it a proper icon

BUG: 408346
FIXED-IN: 19.08.0